# jarl

./: .flir_cache  .gitignore  .nojekyll  CHANGELOG.md  Cargo.toml  DEVELOPMENT.html  DEVELOPMENT.md  LICENSE.html  README.md  _quarto.yml  about.html  any_is_na.html  by-example.html  changelog.html  ci.html  class_equals.html  config.html  contributing-rule-example.html  contributing.html  development.html  dist-workspace.toml  editors.html  flir.toml  foo.R  getting-started.html  index.html  integrations.html  jarl.toml  justfile  make_docs.R  precommit.html  robots.txt  rules.html  search.json  sitemap.xml  styles.css  tutorials.html  using-jarl.html
crates/flir-cli/: Cargo.toml
crates/flir-cli/src/: args.rs  lib.rs  logging.rs  main.rs  output_format.rs
crates/flir-cli/src/commands/: check.rs  server.rs
crates/flir-cli/tests/: integration_tests.rs
crates/flir-cli/tests/integration/: comments.rs  main.rs  output_format.rs  toml.rs
crates/flir-cli/tests/integration/helpers/: binary.rs  command_ext.rs
crates/flir-cli/tests/integration/snapshots/: integration__comments__comment_on_same_line.snap  integration__comments__leading_trailing_comment.snap  integration__comments__multiline_diagnostic_with_comments-2.snap  integration__comments__multiline_diagnostic_with_comments.snap  integration__comments__multiline_fix_with_comments.snap  integration__flir__corner_case.snap  integration__flir__fix_options-2.snap  integration__flir__fix_options-3.snap  integration__flir__fix_options-4.snap  integration__flir__fix_options-5.snap  integration__flir__fix_options.snap  integration__flir__must_pass_path.snap  integration__flir__newline_character_in_string.snap  integration__flir__no_r_files.snap  integration__flir__not_all_fixable_lints.snap  integration__flir__one_lint.snap  integration__flir__parsing_error.snap  integration__flir__parsing_error_for_some_files.snap  integration__flir__safe_and_unsafe_lints.snap  integration__flir__several_lints_one_file.snap  integration__flir__several_lints_several_files.snap  integration__help__help-2.snap  integration__help__help-3.snap  integration__help__help.snap  integration__help__help_check-2.snap  integration__help__help_check.snap  integration__min_r_version__min_r_version_from_cli_only-2.snap  integration__min_r_version__min_r_version_from_cli_only-3.snap  integration__min_r_version__min_r_version_from_description_only-2.snap  integration__min_r_version__min_r_version_from_description_only.snap  integration__output_format__output_concise.snap  integration__output_format__output_default.snap  integration__output_format__output_json.snap  integration__rules__correct_rule_selection_and_exclusion.snap  integration__rules__one_non_existing_ignored_rule.snap  integration__rules__one_non_existing_selected_rule.snap  integration__rules__selected_and_ignored.snap  integration__rules__several_non_existing_ignored_rules.snap  integration__rules__several_non_existing_selected_rules.snap  integration__toml__cli_ignore_adds_to_toml.snap  (+16 more)
crates/flir-lsp/: Cargo.toml  README.md  STRUCTURE.md
crates/flir-lsp/examples/: cli_integration.rs
crates/flir-lsp/src/: client.rs  document.rs  lib.rs  lint.rs  server.rs  session.rs
crates/flir-lsp/tests/: integration_tests.rs
crates/jarl-core/: Cargo.toml  build.rs
crates/jarl-core/benches/: lint_repos.rs
crates/jarl-core/src/: ast_extensions.rs  check.rs  checker.rs  config.rs  db.rs  description.rs  diagnostic.rs  directive.rs  discovery.rs  error.rs  fix.rs  fs.rs  lib.rs  library_calls.rs  library_paths.rs  namespace.rs  package.rs  package_cache.rs  per_file_ignores.rs  roxygen.rs  rule_docs.rs  rule_options.rs  rule_set.rs  rule_table.rs  settings.rs  suppression.rs  suppression_edit.rs  toml.rs  utils.rs  utils_test.rs  vcs.rs
crates/jarl-core/src/analyze/: anyexpression.rs  anyvalue.rs  binary_expression.rs  call.rs  document.rs  expression.rs  for_loop.rs  function_definition.rs  identifier.rs  if_.rs  mod.rs  namespace_expression.rs  parenthesized_expression.rs  subset.rs  top_level.rs  unary_expression.rs  while_.rs
crates/jarl-core/src/lints/: mod.rs
crates/jarl-core/src/lints/all_equal/: all_equal.rs
crates/jarl-core/src/lints/any_duplicated/: any_duplicated.rs
crates/jarl-core/src/lints/any_is_na/: any_is_na.rs  mod.rs
crates/jarl-core/src/lints/base/: mod.rs
crates/jarl-core/src/lints/blanket_suppression/: blanket_suppression.rs  mod.rs
crates/jarl-core/src/lints/browser/: browser.rs  mod.rs
crates/jarl-core/src/lints/class_equals/: class_equals.rs  mod.rs
crates/jarl-core/src/lints/coalesce/: coalesce.rs
crates/jarl-core/src/lints/comments/: mod.rs
crates/jarl-core/src/lints/comparison_double/: comparison_double.rs  mod.rs
crates/jarl-core/src/lints/comparison_negation/: comparison_negation.rs
crates/jarl-core/src/lints/download_file/: download_file.rs  mod.rs
crates/jarl-core/src/lints/dplyr/: dplyr_group_by_ungroup.rs  mod.rs
crates/jarl-core/src/lints/empty_assignment/: empty_assignment.rs
crates/jarl-core/src/lints/equals_na/: equals_na.rs
crates/jarl-core/src/lints/equals_nan/: equals_nan.rs  mod.rs
crates/jarl-core/src/lints/expect_length/: expect_length.rs  mod.rs
crates/jarl-core/src/lints/expect_named/: expect_named.rs  mod.rs
crates/jarl-core/src/lints/expect_not/: expect_not.rs  mod.rs
crates/jarl-core/src/lints/expect_null/: expect_null.rs  mod.rs
crates/jarl-core/src/lints/expect_s3_class/: expect_s3_class.rs  mod.rs
crates/jarl-core/src/lints/expect_true_false/: expect_true_false.rs  mod.rs
crates/jarl-core/src/rmd/: extraction.rs  mod.rs
crates/jarl-core/src/rule_options/: assignment.rs  duplicated_arguments.rs  implicit_assignment.rs  missing_argument.rs  mod.rs  nested_pipe.rs  pipe_consistency.rs  quotes.rs  undesirable_function.rs  unreachable_code.rs  unused_function.rs
crates/jarl-dfg/: Cargo.toml  README.md
crates/jarl-dfg/src/: builder.rs  graph.rs  lib.rs
crates/jarl-semantic/: Cargo.toml
crates/jarl-semantic/src/: lib.rs  strings.rs
python/: README.md  pyproject.toml
python/src/jarl/: __init__.py
(+1470 files in other folders)
