[package]
name = "r"
description = "An experimental reimaginging of R"
authors = ["Doug Kelkhoff", "Sebastian Fischer"]
version = "0.4.0"
edition = "2021"

license-file = "LICENSE.md"

repository = "https://github.com/dgkf/R/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "r"
path = "src/bin.rs"

[lib]
name = "r"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[build-dependencies]
regex = "1.9.4"

[dependencies]
r_derive = { path = "r_derive" }

# parser
pest = "2.7.10"
pest_derive = "2.7.10"

# rng
rand = "0.8.5"
rand_distr = "0.4.3"
getrandom = "0.2.10"

# terminal interfaces
crossterm = { version = "0.27.0", optional = true }
reedline = { version = "0.22.0", optional = true }
nu-ansi-term = { version = "0.49.0", optional = true }

# cli
strum = { version = "0.26.1", features = ["derive"] }
hashbrown = "0.14.5"
colored = "2.1.0"
rayon = "1.10.0"
air = { git = "https://github.com/posit-dev/air", version = "0.1.0" }
serde = "1.0.215"
air_r_parser = { git = "https://github.com/posit-dev/air", version = "0.0.0" }
air_r_syntax = { git = "https://github.com/posit-dev/air", version = "0.0.0" }
biome_diagnostics = "0.5.7"
biome_analyze = "0.5.7"
biome_rowan = "0.5.7"

[features]
default = ["repl"]
repl = ["dep:crossterm", "dep:reedline", "dep:nu-ansi-term"]
