[package]
name = "jarl-core"
description = "Core linting functionality for jarl R linter"
version = "0.6.0-alpha.2"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true


[lib]
name = "jarl_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core parsing and syntax
air_r_parser.workspace = true
air_r_syntax.workspace = true
air_workspace.workspace = true
air_fs.workspace = true
biome_rowan.workspace = true
biome_formatter.workspace = true

# Semantic analysis (per-file scopes, definitions, uses, use-def map)
oak_core.workspace = true
oak_index_vec.workspace = true
oak_package_metadata.workspace = true
oak_semantic.workspace = true
url.workspace = true

# Per-file semantic info (used by semantic-aware lints)
jarl-semantic.workspace = true

# Serialization and data structures
serde.workspace = true
toml.workspace = true
rustc-hash.workspace = true
strsim.workspace = true

# Error handling and utilities
anyhow.workspace = true
tracing.workspace = true
path-absolutize.workspace = true
ignore.workspace = true
etcetera.workspace = true

# Parallel processing
rayon.workspace = true

# Pattern matching
regex.workspace = true

schemars = { workspace = true, optional = true }
annotate-snippets = "0.11"

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

[lints.clippy]
module-inception = "allow"

[features]
schemars = ["dep:schemars"]
