[package]
name = "jarl-dfg"
description = "Dataflow graph construction for R code"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "jarl_dfg"
path = "src/lib.rs"

[dependencies]
air_r_parser.workspace = true
air_r_syntax.workspace = true
biome_rowan.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
insta.workspace = true

[lints.clippy]
module-inception = "allow"
